--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,15 +228,14 @@ h6 {
     display: flex;
     flex-direction: row;
     padding-top: 20px;
-    width: 440px;
+    width: 430px;
     position: relative;
     margin-left: auto;
     margin-right: auto;
 }
 .login_form {
     width: 210px;
-    min-height: 210px;
-    height: 213px;
+    height: 209px;
     border:1px solid rgba(255, 255, 255, 0.5);
     background: linear-gradient(180deg, #000000 30%, #050227 90%);
     border-radius: 20px;
@@ -247,8 +246,7 @@ h6 {
     background: linear-gradient(180deg, #000000 30%, #050227 90%);
     width: 200px;
     max-height: 800px;
-    /* height: 395px; */
-    margin-left: 20px;
+    margin-left: 10px;
     border-radius: 20px;
     padding: 15px;
     overflow: hidden;
@@ -263,7 +261,6 @@ h6 {
     flex-direction:row;
     padding-top: 50px;
     width: 450px;
-    /* height: 580px; */
     position: relative;
     margin-left: auto;
     margin-right: auto;
@@ -287,7 +284,7 @@ h6 {
 .account_information {
     padding: 0px;
     width: 200px;
-    height: 360px;
+    height: 335px;
     border:1px solid rgba(255, 255, 255, 0.5);
     background: linear-gradient(180deg, #000000 30%, #050227 90%);
     border-radius: 20px;
@@ -301,7 +298,7 @@ h6 {
     max-height: 800px;
     border-radius: 20px;
     padding: 15px;
-    margin-left: 20px;
+    margin-left: 10px;
     overflow: hidden;
 }
 #modify_button {
@@ -309,6 +306,49 @@ h6 {
 }
 .input {
     width: 160px;
+}
+@media screen and (max-width: 480px) {
+    .forms {
+        display: inline-block;
+        flex-direction: unset;
+        margin-left: 0px;
+        margin-right: 0px;
+        width: 100%;
+    }
+    .login_form {
+        width: 180px;
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+    .register_form {
+        width: 180px;
+        position: relative;
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .forms_account_view {
+        display: inline-block;
+        flex-direction: unset;
+        margin-left: 0px;
+        margin-right: 0px;
+        width: 100%;
+    }
+    .account_information {
+        width: 200px;
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .modify_form {
+        width: 200px;
+        position: relative;
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 
@@ -456,14 +496,43 @@ h6 {
 @media screen and (max-width: 800px)
 {
     .main_nav {
-        width: 700px;
+        position: relative;
+        width: 100%;
+        height: auto;
+        margin-left: 0px;
+        margin-right: 0px;
     }
     .picture_view {
-        margin-left: 4vw;
+        float: none;
+        display: block;
+        position: relative;
+        width: 280px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .single-picture {
+        width: 280px;
+        height: auto;
     }
     .comment_view {
-        margin-top: 20px;
-        margin-left: 4vw;
+        float: none;
+        display: block;
+        position: relative;
+        width: 280px;
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .single_comment {
+        width: 280px;
+    }
+    .comments_section {
+        width: 280px;
+    }
+    .comment_area {
+        height: 50px;
+        width: 280px;
+        resize: none;
     }
 }
 
@@ -575,10 +644,23 @@ h5 {
     height: 80px;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1000px) {
     .filters_list {
-        margin-left: 2vw;
-        width: 430px;
+        float: none;
+        position: relative;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 85vw;
+    }
+    .filter_box {
+        height: 10vh;
+        width: 10vw;
+        margin-right: 7vw;
+    }
+    .filter {
+        height: 9vh;
+        width: auto;
     }
 }
 
@@ -635,12 +717,23 @@ h5 {
     width: 15.68vw;
     height: auto;
 }
-@media screen and (max-width: 1200px)
+@media screen and (max-width: 1000px)
 {
+    .mainView {
+        display: block;
+        position: relative;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
     .right_box {
-        float: left;
-        margin-left: 2vw;
-        width: 430px;
+        float: none;
+        position: relative;
+        display: block;
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 85vw;
     }
     #full_product_small {
         position: relative;
@@ -649,11 +742,11 @@ h5 {
         margin-left: auto;
         margin-bottom: 4px;
         margin-right: 4px;
-        width: 100px;
+        width: 27.1vw;
       }
     .gallery_picture_small {
         display: block;
-        width: 100px;
+        width: 27.1vw;
         height: auto;
     }
 }
@@ -748,19 +841,34 @@ h5 {
     height: 320px;
 }
 
-@media screen and (max-width: 1200px)
+@media screen and (max-width: 1000px)
 {
-    .left_box {
-        display: inline-block;
+    .left_box_container {
+        position: relative;
+        display: block;
+        float: none;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
     }
     .left_box {
         position: relative;
-        margin-left: 10px;
-
+        display: block;
+        float: none;
+        width: 85vw;
+        margin-left: auto;
+        margin-right: auto;
     }
+
     .left_elements {
         position: absolute;
         margin-left: auto;
         margin-right: auto;
+    }
+    .buttons_list {
+        display: inline-block;
+        margin-top: 330px;
+        height: 40px;
+        width: 85vw;
     }
 }
