--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,6 +70,13 @@ h4 {
     font-size: 20px;
     text-align: center;
 }
+.error_message_view {
+    width: 300px;
+    margin-top: 70px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
 
 .mainView {
     display: inline-block;
