--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,7 @@ a {
 }
 
 #center {
-    height: 88vh;
+    height: 91vh;
     width: 100vw;
     overflow: hidden;
     overflow-y: auto;
@@ -587,17 +587,17 @@ h6 {
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    height: 66vh;
+    height: 80vh;
     background: linear-gradient(180deg, #000000 30%, #050227 90%);
-    width: 76.22vw;
+    width: 54.5vw;
     border:1px solid rgba(255, 255, 255, 0.5);
     border-radius: 25px;
     padding: 20px;
     /* background-color: rgb(250, 176, 176);  */
 }
 .main_box section {
-    height: 66vh;
-    width: 78vw;
+    height: 80vh;
+    width: 55vw;
     overflow: auto;
   }
 
@@ -607,16 +607,17 @@ h6 {
     float: left;
     margin-bottom: 5px;
     margin-right: 5px;
-    width: 25.2vw;
+    width: 18vw;
   }
 .gallery_picture {
     display: block;
-    width: 25.2vw;
+    width: 18vw;
     height: auto;
 }
 .paginator {
     display: block;
     position: relative;
+    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -638,15 +639,57 @@ h5 {
         position: relative;
         margin-left: auto;
         margin-right: auto;
-        height: 75vh;
+        height: 55vh;
         width: 80vw;
         /* background-color: rgb(250, 176, 176);  */
     }
     .main_box section {
-        height: 75vh;
+        height: 55vh;
         width: 80vw;
         overflow-y: auto;
       }
+      #full_product {
+        position: relative;
+        display: block;
+        float: left;
+        margin-bottom: 2px;
+        margin-right: 2px;
+        width: 26.1vw;
+      }
+    .gallery_picture {
+        display: block;
+        width: 26.5vw;
+        height: auto;
+    }
+}
+@media screen and (max-width: 500px)
+{
+    .main_box {
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+        height: 35vh;
+        width: 80vw;
+        /* background-color: rgb(250, 176, 176);  */
+    }
+    .main_box section {
+        height: 35vh;
+        width: 80vw;
+        overflow-y: auto;
+      }
+      #full_product {
+        position: relative;
+        display: block;
+        float: left;
+        margin-bottom: 2px;
+        margin-right: 2px;
+        width: 26.1vw;
+      }
+    .gallery_picture {
+        display: block;
+        width: 26.5vw;
+        height: auto;
+    }
 }
 
 /* FILTERS */
@@ -699,12 +742,13 @@ h5 {
         width: 85vw;
     }
     .filter_box {
-        height: 10vh;
-        width: 10vw;
+        height: 9vh;
+        width: 9vw;
         margin-right: 7vw;
     }
     .filter {
-        height: 9vh;
+        height: 6vh;
+        width: 6vw;
         width: auto;
     }
 }
